--- a/SpringBootGCPExample/cloudbuild.yaml
+++ b/SpringBootGCPExample/cloudbuild.yaml
@@ -15,11 +15,8 @@
 steps:
   - name: maven:3-jdk-8
     entrypoint: mvn
-    args: ["test"]
-  - name: maven:3-jdk-8
-    entrypoint: mvn
-    args: ["package", "-Dmaven.test.skip=true"]
+  - args: ['clean', 'install', '-DskipTests']
   - name: gcr.io/cloud-builders/docker
-    args: ["build", "-t", "gcr.io/$PROJECT_ID/evaangcpautobuild", "--build-arg=JAR_FILE=target/SpringBootGCPExample-0.0.1-SNAPSHOT.jar", "."]
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/evaangcpautobuild', '.']
 images: ["gcr.io/$PROJECT_ID/evaangcpautobuild"]
 # [END cloudbuild_maven]
