--- a/SpringBootGCPExample/cloudbuild.yaml
+++ b/SpringBootGCPExample/cloudbuild.yaml
@@ -12,8 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # [START cloudbuild_maven]
- steps:
- - name: maven:3-jdk-8
-   entrypoint: mvn
-   args: ['package','-Dmaven.test.skip=true']
+steps:
+  - name: maven:3-jdk-8
+    entrypoint: mvn
+    args: ["test"]
+  - name: maven:3-jdk-8
+    entrypoint: mvn
+    args: ["package", "-Dmaven.test.skip=true"]
+  - name: gcr.io/cloud-builders/docker
+    args: ["build", "-t", "gcr.io/$PROJECT_ID/hellospring", "--build-arg=JAR_FILE=target/SpringBootGCPExample-0.0.1-SNAPSHOT.jar", "."]
+images: ["gcr.io/$PROJECT_ID/hellospring"]
 # [END cloudbuild_maven]
